[tool.poetry]
name = "auth0-api-client"
version = "1.3.5"
description = "Client library for Auth0 management API"
authors = ["Jon Daly <jonathan.daly@sensynehealth.com>"]
keywords = ["Auth0", "API", "Management"]
repository = "https://github.com/draysontechnologies/auth0-api-client"

[[tool.poetry.source]]
name = "sensynehealth"
url = "https://pypi.fury.io/sensynehealth/"

[tool.poetry.dependencies]
python = "3.9"
environs = "9.*"
requests = "2.*"
she-logging = "1.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = "*"
pytest-mock = "*"
requests_mock = "1.8.*"
safety = "*"
tox = "*"
types-requests = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "flask_testing",
    "pytest",
    "environs",
    "requests_mock",
    "dhosredis"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["_pytest", "environs", "pytest", "pytest_mock", "requests", "requests_mock", "she_logging", "toml"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:marshmallow.fields"
